kubernetes/apps/default/oauth/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-oauth2-proxy
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - "auth.lildrunkensmurf.com"
      secretName: auth.lildrunkensmurf.com-tls
  rules:
    - host: auth.lildrunkensmurf.com
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: app-oauth2-proxy
                port:
                  number: 80
